# WebNotes

./: LICENSE  README.md
.github/workflows/: release.yml
webnotes/: .gitignore  2  eslint.config.mjs  next.config.ts  package-lock.json  package.json  postcss.config.mjs  prisma.config.ts  tailwind.config.ts  test-prisma.ts  vitest.config.ts
webnotes/.github/workflows/: release.yml
webnotes/cli/: Cargo.toml  README.md
webnotes/cli/src/: main.rs
webnotes/cli/src/app/: commands.rs  keybindings.rs  mod.rs  modes.rs
webnotes/cli/src/editor/: buffer.rs  cursor.rs  mod.rs  selection.rs  undo.rs  viewport.rs
webnotes/cli/src/notes/: backlinks.rs  frontmatter.rs  links.rs  mod.rs  note.rs  tags.rs
webnotes/cli/src/search/: fuzzy.rs  index.rs  mod.rs
webnotes/cli/src/storage/: db.rs  git.rs  mod.rs  sync.rs  workspace.rs
webnotes/cli/src/syntax/: highlighter.rs  markdown.rs  mod.rs  themes.rs
webnotes/cli/src/ui/: mod.rs  notifications.rs  picker.rs  preview.rs  render.rs  statusline.rs
webnotes/cli/src/utils/: mod.rs  slugify.rs  time.rs
webnotes/cli/tests/integration/: buffer_ops.rs  git_workflow.rs  note_creation.rs
webnotes/cli/tests/unit/: mod.rs
webnotes/prisma/: schema.prisma
webnotes/public/: install.ps1  install.sh  manifest.json
webnotes/scripts/: build-desktop.js
webnotes/src-tauri/: Cargo.toml  tauri.conf.json
webnotes/src-tauri/capabilities/: default.json
webnotes/src-tauri/lib/: tauri.ts
webnotes/src-tauri/src/: lib.rs
webnotes/src/app/: globals.css  layout.tsx  page.tsx
webnotes/src/app/components/: AuthButton.tsx  AuthListener.tsx  CommandPalette.tsx  CreateFolderModal.tsx  ErrorBoundary.tsx  HelpModal.tsx  LoadingScreen.tsx  MathBubbleMenu.tsx  (+17 more)
webnotes/src/hooks/: useStorage.ts  useSyncQueue.ts
webnotes/src/lib/: auth.ts  data.ts  prisma.ts  tauri.ts  welcome-notes.ts  window-drag-fix.ts
webnotes/src/store/: useNotesStore.ts
webnotes/src/types/: index.ts  next-auth.d.ts  tiptap-markdown.d.ts  tiptap.d.ts
(+68 files in other folders)
